# claude-castle

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/: bootstrap.sh  settings.json  soul.md
.claude/memory/: MEMORY.md
.claude/skills/: DOMAIN-AWARENESS.md
.claude/skills/add-a-page/: SKILL.md
.claude/skills/audit-dead-code/: SKILL.md
.claude/skills/audit-function-purposes/: SKILL.md
.claude/skills/close/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/grill/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/improve-codebase-architecture/: DEEPENING.md  SKILL.md
.claude/skills/make-document/: SKILL.md
.claude/skills/onboard/: SKILL.md  phases.md
apps/: __init__.py
apps/documents/: __init__.py  __main__.py  load_design.py  make_pdf.py  pyproject.toml  render_html.py
apps/documents/templates/: README.md
apps/documents/templates/invoice/: sample-data.yaml  template.html
apps/documents/tests/: conftest.py  test_load_design.py  test_pdf_invoice.py  test_render_html.py
apps/notulen/: CLAUDE.md  __init__.py
apps/website/: index.html
business/: README.md
config/: castle.env.example
design/: README.md  base.css  company.yaml  index.css  tokens.css
docs/: bible.md
guides/: 00-start-here.md  01-terminal-basics.md  02-install-the-tools.md  03-meet-claude-code.md  04-github-setup.md  05-scaleway-account.md  06-your-server-and-website.md  07-nextcloud.md  08-notulen.md  09-daily-use.md
infra/: README.md
infra/auto-deploy/: auto-deploy.sh  deploy.sh
infra/caddy/: Caddyfile
infra/email/: README.md  send_document.py
infra/gpu/: README.md  build-worker.sh  make-dashboard-kubeconfig.sh  pick-gpu.sh
infra/gpu-jobs/: pyproject.toml
infra/gpu-jobs/gpu_jobs/: __init__.py
infra/gpu-jobs/gpu_jobs/cluster/: __init__.py  cluster.py  ensure_config.py  k8s_call.py  namespace.py
infra/gpu-jobs/gpu_jobs/config/: __init__.py  max_daily_jobs.py  notulen_worker_image.py
infra/gpu-jobs/gpu_jobs/creators/: __init__.py  create_notulen_job.py
infra/gpu-jobs/gpu_jobs/naming/: __init__.py  job_name.py
infra/gpu-jobs/gpu_jobs/security/: __init__.py  worker_pod_security_context.py  worker_security_context.py
infra/nextcloud/: README.md  nextcloud-2fa-enforce.sh  postgres-init.sh  purge_old_auth_logs.py
infra/nextcloud-sync/: Dockerfile  __init__.py  app.py  auth.py  events.py  paths.py  pyproject.toml  register-webhooks.sh  writer.py
infra/nextcloud-sync/tests/: test_bearer_fail_closed.py  test_endpoint_auth_gate.py  test_event_shapes_parse.py  test_path_confinement.py  test_writer_idempotent_commits.py
infra/secrets/: README.md  pull-env.sh  push-env.sh
infra/systemd/: auto-deploy.service  auto-deploy.timer  castle-watchdog.service  castle-watchdog.timer  install.sh  purge-auth-logs.service  purge-auth-logs.timer
infra/watchdog/: README.md  watchdog.sh
lib/dashkit/: CLAUDE.md  __init__.py  pyproject.toml
lib/dashkit/ai/: CLAUDE.md  __init__.py  _config.py  _extract_json.py  call_claude.py  ensure_ai_calls_table.py  log_ai_call.py
lib/dashkit/core/: CLAUDE.md  __init__.py  _frontend_static.py  app_factory.py  auth.py  constants.py  db.py  identifiers.py  inspector.py
lib/dashkit/core/audit/: CLAUDE.md  __init__.py  fetch_activity.py  log_activity.py  table.py
lib/dashkit/core/sync/: CLAUDE.md  __init__.py  fetch_sync_status.py  make_heartbeat_router.py  table.py
lib/dashkit/core/tests/: test_identifier_allowlist.py
lib/dashkit/frontend/: CLAUDE.md  api.js  audit.js  base.css  dashboard-common.js  toast.js  view.js
lib/dashkit/secrets/: CLAUDE.md  __init__.py  activity.py  get_secret.py  is_rotation_due.py  list_pending_requests.py  list_secrets.py  list_secrets_by_kind.py  open_alert.py  record_rotation_finish.py  record_rotation_start.py  rows.py  sweep_stale_secrets.py
lib/dashkit/secrets/tests/: test_rotation_due_at_80_percent.py
prompts/: 01-check-my-setup.md  02-create-my-server.md  03-first-deploy.md  04-nextcloud-setup.md  05-notulen-setup.md  06-add-a-page.md  07-troubleshoot.md  README.md
(+98 files in other folders)
