[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextcloud-sync"
version = "0.1.0"
description = "Nextcloud webhook to GitHub Contents API sync service for the castle stack."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "requests>=2.31",
]

[tool.setuptools]
# Single top-level package: this directory itself (same pattern as
# lib/dashkit).
packages = ["nextcloud_sync"]
package-dir = {"nextcloud_sync" = "."}
